--- a/Board/detailUpdates.html
+++ b/Board/detailUpdates.html
@@ -313,6 +313,19 @@ margin-bottom: 12px; /* Add some space below the input */
                                       <th scope="col">Reg No.</th>
                                     <th scope="col" style="min-width: 28vh">Name</th>
                                     <th scope="col" style="text-align: center">Percentage</th>
+                                    <th scope="col" style="min-width: 35vh">May2'23</th> 
+                                    <th scope="col" style="min-width: 35vh">May1'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Apr2'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Apr1'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Mar2'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Mar1'23</th> 
+
+                                    <th scope="col" style="min-width: 35vh">Feb2'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Feb1'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Jan2'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Jan1'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Dec2'22</th> 
+                                    <th scope="col" style="min-width: 35vh">Dec1'22</th> 
                                     <th scope="col" style="min-width: 35vh">Nov2'22</th> 
                                     <th scope="col" style="min-width: 35vh">Nov1'22</th> 
                                     <th scope="col" style="min-width: 35vh">Oct2'22</th> 
@@ -350,6 +363,10 @@ margin-bottom: 12px; /* Add some space below the input */
                                       <th scope="col">Reg No.</th>
                                     <th scope="col" style="min-width: 28vh">Name</th>
                                     <th scope="col" style="text-align: center">Percentage</th>
+                                    <th scope="col" style="min-width: 35vh">Jan2'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Jan1'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Dec2'22</th> 
+                                    <th scope="col" style="min-width: 35vh">Dec1'22</th> 
                                     <th scope="col" style="min-width: 35vh">Nov2'22</th> 
                                     <th scope="col" style="min-width: 35vh">Nov1'22</th> 
                                     <th scope="col" style="min-width: 35vh">Oct2'22</th> 
@@ -393,6 +410,21 @@ margin-bottom: 12px; /* Add some space below the input */
                                       <th scope="col">Reg No.</th>
                                     <th scope="col" style="min-width: 28vh">Name</th>
                                     <th scope="col" style="text-align: center">Percentage</th>
+                                    <th scope="col" style="min-width: 35vh">Jun2'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Jun1'23</th> 
+                                    <th scope="col" style="min-width: 35vh">May2'23</th> 
+                                    <th scope="col" style="min-width: 35vh">May1'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Apr2'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Apr1'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Mar2'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Mar1'23</th> 
+
+                                    <th scope="col" style="min-width: 35vh">Feb2'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Feb1'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Jan2'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Jan1'23</th> 
+                                    <th scope="col" style="min-width: 35vh">Dec2'22</th> 
+                                    <th scope="col" style="min-width: 35vh">Dec1'22</th> 
                                     <th scope="col" style="min-width: 35vh">Nov2'22</th> 
                                     <th scope="col" style="min-width: 35vh">Nov1'22</th> 
                                     <th scope="col" style="min-width: 35vh">Oct2'22</th> 
