--- a/recruitment/test.html
+++ b/recruitment/test.html
@@ -22,7 +22,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="../MembersPanel/assets/css/style.css"
+      href="./style.css"
     />
 
     <link href="../assets/img/favicon.png" rel="icon" />
@@ -45,16 +45,15 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Sora&display=swap"
-      rel="stylesheet"
-    />
+
+
+
+
+
   </head>
 
   <body
-    style="background-color: rgb(238, 238, 238)"
+    style="background-color: #242629;"
     oncontextmenu="return false"
   >
     <div class="topnav" style="width: 100%">
@@ -75,7 +74,7 @@
       </div>
     </div>
 
-    <div class="header" style="background-color: #333333; height: 70px">
+    <div class="header" style="background-color: #191B20; height: 70px">
       <div class="header-left">
         <a class="logo" style="float: left; margin-top: 9px">
           <img
@@ -103,7 +102,7 @@
       <div class="userDetails"></div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         var elems = document.querySelectorAll(".modal");
@@ -114,18 +113,18 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-storage.js"></script>
+
 
     <script>
       // Your web app's Firebase configuration
       var firebaseConfig = {
-        apiKey: "AIzaSyDoiXHxMG_vZPHz0eeJj5s661xhfU-Y4_4",
-        authDomain: "members-76725.firebaseapp.com",
-        projectId: "members-76725",
-        storageBucket: "members-76725.appspot.com",
-        messagingSenderId: "734645197873",
-        appId: "1:734645197873:web:808127fdb4d643d4d24910",
-        measurementId: "G-7LYZ3R48GT",
+        apiKey: "AIzaSyDKldPSrIEfCvj0YQTU2oxJPTpzJfOqsxE",
+        authDomain: "recruitment-1f4e0.firebaseapp.com",
+        projectId: "recruitment-1f4e0",
+        storageBucket: "recruitment-1f4e0.appspot.com",
+        messagingSenderId: "926146316604",
+        appId: "1:926146316604:web:f15c303d532490a9463639",
+        measurementId: "G-HBJM12P8QG"
       };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
@@ -133,18 +132,18 @@
     <script src="scripts/auth.js"></script>
     <script src="scripts/test.js"></script>
 
-    <script>
+  <script>
       window.onbeforeunload = function () {
         return "Are you sure you want to leave?";
       };
-    </script>
+    </script> 
 
-    <script>
+  <script>
       document.addEventListener("visibilitychange", function () {
         document = document.visibilityState;
         alert("Tab changed!");
       });
-    </script>
+    </script> 
 
     <script>
       document.onkeydown = function (e) {
