--- a/Board/OfflineEvents/OfflineEventsAtten.html
+++ b/Board/OfflineEvents/OfflineEventsAtten.html
@@ -174,6 +174,7 @@ margin-bottom: 12px; /* Add some space below the input */
                           <tr style="background-color: #0d6efd;color: #fff"> 
                             <th scope="col">Reg No.</th>
                              <th scope="col" style="min-width: 20vh;">Name</th>
+                             <th scope="col" style="min-width: 20vh;">Book Drive</th>
                              <th scope="col" style="min-width: 20vh;">NE Convene'22</th>
                              <th scope="col" style="min-width: 14vh;">Children's Day</th>
                           <th scope="col" style="min-width: 14vh;">Cleanliness Drive II</th>
@@ -262,7 +263,7 @@ margin-bottom: 12px; /* Add some space below the input */
                       </th>
 
                        <td style="font-size:10px; font-weight:600">${data.name}</td>
-                    
+                       <td style="font-size:10px; color: red; font-weight:600"><span style="color: ${data.color7}">${data.event7}</span> <i style="color: green; font-size:15px; display:${data.e7};cursor: pointer " class="fa fa-download" onclick="location.href='${data.e7}'" aria-hidden="true"></i></td>
                        <td style="font-size:10px; color: red; font-weight:600"><span style="color: ${data.color6}">${data.event6}</span> <i style="color: green; font-size:15px; display:${data.e6};cursor: pointer " class="fa fa-download" onclick="location.href='${data.e6}'" aria-hidden="true"></i></td>
                        <td style="font-size:10px; color: red; font-weight:600"><span style="color: ${data.color5}">${data.event5}</span> <i style="color: green; font-size:15px; display:${data.e5};cursor: pointer " class="fa fa-download" onclick="location.href='${data.e5}'" aria-hidden="true"></i></td>
                        <td style="font-size:10px; color: red; font-weight:600"><span style="color: ${data.color4}">${data.event4}</span> <i style="color: green; font-size:15px; display:${data.e4};cursor: pointer " class="fa fa-download" onclick="location.href='${data.e4}'" aria-hidden="true"></i></td>
