--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
 
 
     <div class="col">
-      <div class="card" style="background-color: #fff;border-top: 3px solid #dc3545">
+      <div class="card" style="background-color: #fff;border-top: 3px solid #9743e0">
         <h1 style="text-align: center;"><img src="assets/img/superadmin.png" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
         <div class="card-body" style="text-align: center">
           <h5 class="card-title" style="color: #dc3545;font-size:15px">Admin</h5>
           <p class="card-text"></p>
-          <a href="https://adminportal.wakewithwellness.in" style="width: 120px; background-color: #dc3545; color: #fff; margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
+          <a href="https://adminportal.wakewithwellness.in" style="width: 120px; background-color: #9743e0; color: #fff; margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
       </div>
     </div>
