--- a/Coordinators/agreement.html
+++ b/Coordinators/agreement.html
@@ -226,6 +226,18 @@
                     </div>
 
                     <div class="form-group">
+                      <label>Blood group</label>
+                      <input
+                        type="text"
+                        id="blood"
+                        name="blood"
+                        placeholder="Blood group"
+                        required
+                        class="form-control"
+                      />
+                    </div>
+
+                    <div class="form-group">
                       <label
                         >Alternate Contact Number (State your relation with the
                         person)</label
