--- a/registration.html
+++ b/registration.html
@@ -44,8 +44,8 @@
 
       <div class="container" style="margin-top: 12vh;text-align: center">
      
-   <h2 style="color: #3d3d3d; font-weight: bold">Jivanam : Book Donation Drive'23</h2>
-        <h4>5th February 2023</h4><hr>
+   <h2 style="color: #3d3d3d; font-weight: bold">Jivanam : Mental Health Workshop</h2>
+        <h4>6th May 2023</h4><hr>
       </div>
        
 
