--- a/Coordinators/agreement.html
+++ b/Coordinators/agreement.html
@@ -66,7 +66,7 @@
     style="background-color: rgb(238, 238, 238)"
     oncontextmenu="return false"
   >
-    <div class="header" style="background-color: #333333">
+    <div class="header" style="background-color: #03b1fc">
       <div class="header-left">
         <a class="logo" style="float: left">
           <img src="../assets/img/favicon.png" width="35" height="35" alt="" />
@@ -75,21 +75,22 @@
       </div>
     </div>
 
-    <div class="container-fluid" style="margin-top: 9vh">
+    <div class="container" style="margin-top: 9vh">
       <div
         class="content"
         style="
           background-color: #fff;
-          border-top: 3px solid #333333;
+          border-top: 3px solid #03b1fc;
           padding: 15px;
           border-radius: 5px;
         "
       >
         <div class="row">
           <div class="col-sm-12">
-            <h4 class="page-title">
-              Wake With Wellness <strong>Coordinator's Agreement</strong>
-            </h4>
+            <h2 style="font-weight: 600">
+              Wake With Wellness
+              <strong style="color: #03b1fc">Coordinator's Agreement</strong>
+            </h2>
             <hr />
           </div>
         </div>
@@ -115,11 +116,11 @@
         </div>
       </div>
 
-      <div
+      <!-- <div
         class="content"
         style="
           background-color: #fff;
-          border-top: 3px solid #333333;
+          border-top: 3px solid #03b1fc;
           padding: 15px;
           border-radius: 5px;
           margin-top: 20px;
@@ -132,7 +133,7 @@
             id="demo"
           ></h2>
         </div>
-      </div>
+      </div> -->
 
       <br />
 
@@ -140,14 +141,16 @@
         class="content"
         style="
           background-color: #fff;
-          border-top: 3px solid #333333;
+          border-top: 3px solid #03b1fc;
           padding: 15px;
           border-radius: 5px;
         "
       >
         <div class="row">
           <div class="col-sm-12">
-            <h5 class="page-title">Agreement Form</h5>
+            <h5 class="page-title" style="font-weight: bold; color: #03b1fc">
+              Agreement Form
+            </h5>
             <hr />
           </div>
         </div>
@@ -163,7 +166,7 @@
                       <label>Name</label>
                       <input
                         type="text"
-                        id="Membername"
+                        id="name"
                         name="name"
                         placeholder="Your name.."
                         required
@@ -172,9 +175,10 @@
                     </div>
                     <div class="form-group">
                       <label>Email</label>
+
                       <input
                         type="email"
-                        id="Email"
+                        id="email"
                         name="email"
                         placeholder="Your e-mail.."
                         required
@@ -186,8 +190,8 @@
                       <label>Contact no.</label>
                       <input
                         type="tel"
-                        id="Contact"
-                        name="contact"
+                        id="phone"
+                        name="phone"
                         maxlength="10"
                         minlength="10"
                         title="Ten digits code"
@@ -201,7 +205,7 @@
                       <label>Whatsapp no.</label>
                       <input
                         type="tel"
-                        id="Whatsapp"
+                        id="whatsapp"
                         name="whatsapp"
                         maxlength="10"
                         minlength="10"
@@ -215,6 +219,7 @@
                   <div class="col-md-6">
                     <div class="form-group">
                       <label>Date of Birth</label>
+
                       <input
                         type="date"
                         id="dob"
@@ -227,14 +232,21 @@
 
                     <div class="form-group">
                       <label>Blood group</label>
-                      <input
-                        type="text"
+                      <select
                         id="blood"
                         name="blood"
-                        placeholder="Blood group"
                         required
                         class="form-control"
-                      />
+                      >
+                        <option value="A+">A+</option>
+                        <option value="A-">A-</option>
+                        <option value="B+">B+</option>
+                        <option value="B-">B-</option>
+                        <option value="O+">O+</option>
+                        <option value="O-">O-</option>
+                        <option value="AB+">AB+</option>
+                        <option value="AB-">AB-</option>
+                      </select>
                     </div>
 
                     <div class="form-group">
@@ -244,8 +256,8 @@
                       >
                       <input
                         type="text"
-                        id="Alternate"
-                        name="alternateNo"
+                        id="altno"
+                        name="altno"
                         title="Ten digits code"
                         placeholder="Your alternate number (relation).."
                         required
@@ -259,8 +271,8 @@
                       >
                       <input
                         type="text"
-                        id="College"
-                        name="institution"
+                        id="college"
+                        name="college"
                         placeholder="Your educational institution.."
                         required
                         class="form-control"
@@ -274,12 +286,7 @@
                 <div class="column">
                   <div class="form-group">
                     <label>
-                      <input
-                        type="checkbox"
-                        id="Checkbox1"
-                        name="declaration"
-                        required
-                      />
+                      <input type="checkbox" required />
                       I will participate and be responsive towards the
                       organisations. If I remain inactive and irresponsive
                       towards the codes and ethics of the organisation during my
@@ -293,12 +300,7 @@
 
                   <div class="form-group">
                     <label>
-                      <input
-                        type="checkbox"
-                        id="Checkbox2"
-                        name="declaration"
-                        required
-                      />
+                      <input type="checkbox" required />
                       I understand that all the funds raised/ donated will be
                       used only for WakeWithWellness (after getting approval
                       from the Head of Finance) and not for any other reasons.
@@ -314,12 +316,7 @@
 
                   <div class="form-group">
                     <label>
-                      <input
-                        type="checkbox"
-                        id="Checkbox3"
-                        name="declaration"
-                        required
-                      />
+                      <input type="checkbox" required />
                       I understand that I should
                       <strong
                         >maintain confidentiality of plans, ideas, resources,
@@ -342,12 +339,7 @@
 
                   <div class="form-group">
                     <label>
-                      <input
-                        type="checkbox"
-                        id="Checkbox4"
-                        name="declaration"
-                        required
-                      />
+                      <input type="checkbox" required />
                       If at any point of time I want to discontinue working for
                       my position, I will inform my CBO’s HR Head or respective
                       Department Head ,
@@ -369,12 +361,7 @@
 
                   <div class="form-group">
                     <label>
-                      <input
-                        type="checkbox"
-                        id="Checkbox5"
-                        name="declaration"
-                        required
-                      />
+                      <input type="checkbox" required />
                       I will work to the best of my ability. I recognize that
                       continuous negligence of responsibilities, deadlines and
                       confidentiality rules will result in my removal from
@@ -384,12 +371,7 @@
 
                   <div class="form-group">
                     <label>
-                      <input
-                        type="checkbox"
-                        id="Checkbox6"
-                        name="declaration"
-                        required
-                      />
+                      <input type="checkbox" required />
                       I understand that if I am found indulging in
                       <strong
                         >malpractices of any sort, spreading misinformation
@@ -404,12 +386,7 @@
 
                   <div class="form-group">
                     <label>
-                      <input
-                        type="checkbox"
-                        id="Checkbox7"
-                        name="declaration"
-                        required
-                      />
+                      <input type="checkbox" required />
                       I will respect all individuals and their preferred
                       identity, be inclusive in my position, conduct all my
                       responsibilities with dedication, transparency and
@@ -419,12 +396,7 @@
 
                   <div class="form-group">
                     <label>
-                      <input
-                        type="checkbox"
-                        id="Checkbox8"
-                        name="declaration"
-                        required
-                      />
+                      <input type="checkbox" required />
                       I will abide the code of ethics and professional conduct
                       of
                       <span style="font-weight: bold">WakeWithWellness</span>
@@ -433,6 +405,10 @@
                     </label>
                   </div>
                 </div>
+                <input type="date" id="date" hidden />
+                <input type="text" id="agree" value="Agreed" hidden />
+                <input type="text" id="status" value="Pending" hidden />
+                <input type="text" id="color" value="yellow" hidden />
                 <hr />
                 <div class="alert">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
@@ -463,11 +439,124 @@
     <script src="../MembersPanel/assets/js/jquery.slimscroll.js"></script>
     <script src="../MembersPanel/assets/js/app.js"></script>
 
+    <script>
+      // Get the current date
+      const currentDate = new Date().toISOString().slice(0, 10);
+
+      // Set the current date as the value of the input field
+      document.getElementById("date").value = currentDate;
+    </script>
+
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
 
-    <script src="./scripts/extraform.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
+
+    <script>
+      // Initialize Firebase
+      var firebaseConfig = {
+        apiKey: "AIzaSyDoiXHxMG_vZPHz0eeJj5s661xhfU-Y4_4",
+        authDomain: "members-76725.firebaseapp.com",
+        databaseURL: "https://members-76725-default-rtdb.firebaseio.com",
+        projectId: "members-76725",
+        storageBucket: "members-76725.appspot.com",
+        messagingSenderId: "734645197873",
+        appId: "1:734645197873:web:808127fdb4d643d4d24910",
+        measurementId: "G-7LYZ3R48GT",
+      };
+      firebase.initializeApp(firebaseConfig);
+
+      // Get a reference to the Firestore database
+      var db = firebase.firestore();
+
+      // Add an event listener for form submission
+      document
+        .getElementById("extraForm")
+        .addEventListener("submit", function (event) {
+          event.preventDefault(); // Prevent the form from submitting normally
+
+          // Get the form data
+          var name = document.getElementById("name").value;
+          var email = document.getElementById("email").value;
+          var phone = document.getElementById("phone").value;
+          var whatsapp = document.getElementById("whatsapp").value;
+          var altno = document.getElementById("altno").value;
+          var dob = document.getElementById("dob").value;
+          var blood = document.getElementById("blood").value;
+          var college = document.getElementById("college").value;
+          var date = document.getElementById("date").value;
+          var agree = document.getElementById("agree").value;
+          var status = document.getElementById("status").value;
+          var color = document.getElementById("color").value;
+
+          // Add the data to Firestore
+          db.collection("CoordinatorsAgreement")
+            .add({
+              name: name,
+              email: email,
+              phone: phone,
+              whatsapp: whatsapp,
+              altno: altno,
+              dob: dob,
+              blood: blood,
+              college: college,
+              date: date,
+              agree: agree,
+              status: status,
+              color: color,
+            })
+            .then(function (docRef) {
+              // Show alert
+              document.querySelector(".alert").style.display = "block";
+              document.getElementById("submit").innerHTML = "Submitted";
+              document.querySelector("#submit").disabled = "disabled";
+              document.querySelector("#submit").style.cursor = "not-allowed";
+              document.querySelector("#submit").style.background = "#70c6ff";
+              document.querySelector("#submit").style.border = "none";
+
+              // Clear form
+              document.getElementById("extraForm").reset();
+            })
+            .catch(function (error) {
+              console.error("Error adding document: ", error);
+              alert("Error submitting data. Please try again.");
+            });
+        });
+
+      // Set the date we're counting down to
+      var countDownDate = new Date("April 22, 2023 22:04:00").getTime();
+
+      // Update the count down every 1 second
+      var x = setInterval(function () {
+        // Get today's date and time
+        var now = new Date().getTime();
+
+        // Find the distance between now and the count down date
+        var distance = countDownDate - now;
+
+        // Time calculations for days, hours, minutes and seconds
+        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+        var hours = Math.floor(
+          (distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)
+        );
+        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+        // If the count down is finished, write some text
+        if (distance < 0) {
+          clearInterval(x);
+          // document.getElementById("demo").innerHTML = "Submissions closed";
+          // document.getElementById("demo").style.color = "red";
+          //  document.getElementById("demo").style.borderColor = "red";
+
+          document.querySelector("#submit").style.color = "white";
+          document.querySelector("#submit").style.background = "#cccccc";
+          document.querySelector("#submit").style.border = "none";
+          document.querySelector("#submit").disabled = "disabled";
+          document.querySelector("#submit").style.cursor = "not-allowed";
+        }
+      }, 1000);
+    </script>
 
     <script>
       document.onkeydown = function (e) {
