--- a/Coordinators/agreement.html
+++ b/Coordinators/agreement.html
@@ -64,7 +64,7 @@
 
   <body
     style="background-color: rgb(238, 238, 238)"
-    oncontextmenu="return false"
+    oncontextmenu="return true"
   >
     <div class="header" style="background-color: #03b1fc">
       <div class="header-left">
@@ -238,6 +238,7 @@
                         required
                         class="form-control"
                       >
+                        <option selected disabled value="">--Select--</option>
                         <option value="A+">A+</option>
                         <option value="A-">A-</option>
                         <option value="B+">B+</option>
