--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
 <body style="overflow-x: hidden;" >
   <!--oncontextmenu="return false"-->
 
-  <div class="header">
+  <div class="header" style="-webkit-box-shadow: 0px 4px 11px 1px rgba(0,0,0,0.33);
+  -moz-box-shadow: 0px 4px 11px 1px rgba(0,0,0,0.33);
+  box-shadow: 0px 4px 11px 1px rgba(0,0,0,0.33); background-color:rgb(53, 53, 53); height:60px" >
     <div class="header-left">
-      <a class="logo" style="float:left;">
-        <img src="../assets/img/favicon.png" width="35" height="35" alt=""> <span>WakeWithWellness</span>
-      </a>
+      <p class="logo" style="float:left;margin-top:5px">
+        <img src="../assets/img/favicon.png" width="35" height="35" alt=""> <span style="color:#fff; text-decoration: hidden">WakeWithWellness</span>
+      </p>
     </div>
    
 
@@ -55,7 +57,8 @@
 
 <!-- ======= Header ======= -->
 <!-- End Header -->
-<div class="container" style="margin-top: 68px;text-align: center;">
+<br>
+<div class="container" style="margin-top: 9vh;text-align: center;">
   <h3 style="color: #16151a; font-weight: bold;font-size:19px">Wake With Wellness Portal</h3>
   <p style="font-size:14px; color:grey; margin-top:-5px"><span style="font-weight: 500">Wake With Wellness</span> is a Community Based Organization registered under <span style="font-weight: 500">UNITED NATIONS</span> with a vision of steering people for a hale and hearty life form, <span style="font-weight: 500">‘We Are People Caring For People’</span> </p>
 </div>
@@ -86,7 +89,7 @@
     </div>
 
 
-    <div class="col">
+    <!-- <div class="col">
       <div class="card" style="background-color: #fff;border-top: 3px solid #0d6efd">
         <h1 style="text-align: center;"><img src="assets/img/admin.png" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
         <div class="card-body" style="text-align: center">
@@ -95,7 +98,7 @@
           <a href="./Board/main.html" style="width: 120px; background-color: #0d6efd; color: #fff;margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
     <div class="col">
