--- a/Coordinators/events.html
+++ b/Coordinators/events.html
@@ -52,9 +52,18 @@
       </div>
     </div>
 
-    <div class="header" style="background-color: #03b1fc">
+    <div
+      class="header"
+      style="
+        -webkit-box-shadow: 0px 4px 11px 1px rgba(0, 0, 0, 0.33);
+        -moz-box-shadow: 0px 4px 11px 1px rgba(0, 0, 0, 0.33);
+        box-shadow: 0px 4px 11px 1px rgba(0, 0, 0, 0.33);
+        background-color: rgb(53, 53, 53);
+        height: 60px;
+      "
+    >
       <div class="header-left">
-        <a class="logo" style="margin-left: -15px">
+        <a class="logo" style="margin-left: -15px;margin-top: 3px"">
           <img src="../assets/img/favicon.png" width="35" height="35" alt="" />
           <span style="font-size: 17px">Coordinator Portal</span>
         </a>
