--- a/Coordinators/activities.html
+++ b/Coordinators/activities.html
@@ -46,9 +46,18 @@
 
   <body style="background-color: rgb(238, 238, 238)">
     <div class="main-wrapper">
-      <div class="header" style="background-color: #03b1fc">
+      <div
+        class="header"
+        style="
+          -webkit-box-shadow: 0px 4px 11px 1px rgba(0, 0, 0, 0.33);
+          -moz-box-shadow: 0px 4px 11px 1px rgba(0, 0, 0, 0.33);
+          box-shadow: 0px 4px 11px 1px rgba(0, 0, 0, 0.33);
+          background-color: rgb(53, 53, 53);
+          height: 60px;
+        "
+      >
         <div class="header-left">
-          <a href="main.html" class="logo">
+          <a href="main.html" class="logo" style="margin-top: 3px">
             <img
               src="../assets/img/favicon.png"
               width="35"
@@ -107,7 +116,7 @@
           style="
             background-color: #fff;
             margin: 15px;
-            border-top: 3px solid #03b1fc;
+            border-top: 3px solid rgb(53, 53, 53);
             padding: 20px;
             border-radius: 5px;
           "
@@ -123,7 +132,7 @@
               <div class="activity">
                 <div class="activity-box">
                   <ul class="activity-list">
-                    <!-- <li style="border-color:#03b1fc;border-radius: 5px;">
+                    <!-- <li style="border-color:rgb(53, 53, 53);border-radius: 5px;">
                                         <div class="activity-content" onclick="location.href='../MembersPanel/tshirt.html'" style="cursor: pointer">
                                             <div class="timeline-content">
                                                 <a style="color: rgb(67, 67, 67)" class="name">Order your WWW Tshirt now! <span style="color: red">[Last vate: 21st November 2022]</span></a> 
@@ -131,7 +140,9 @@
                                         </div>
                                     </li> -->
 
-                    <li style="border-color: #03b1fc; border-radius: 5px">
+                    <li
+                      style="border-color: rgb(53, 53, 53); border-radius: 5px"
+                    >
                       <div
                         class="activity-content"
                         onclick="location.href='events.html'"
