--- a/Coordinators/payments.html
+++ b/Coordinators/payments.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -52,9 +52,9 @@
       </div>
     </div>
 
-    <div class="header" style="background-color: #03b1fc">
+    <div class="header">
       <div class="header-left">
-        <a class="logo" style="margin-left: -15px">
+        <a class="logo" style="margin-left: -15px; margin-top: 3px">
           <img src="../assets/img/favicon.png" width="35" height="35" alt="" />
           <span style="font-size: 17px">Coordinator Portal</span>
         </a>
