--- a/Coordinators/main.html
+++ b/Coordinators/main.html
@@ -478,7 +478,7 @@
           <button
             style="
               width: 100%;
-              background-color: #198754;
+              background-color: rgb(53, 53, 53);
               padding: 10px;
               border: none;
               cursor: pointer;
@@ -506,7 +506,10 @@
         </p>
 
         <div class="file-field input-field">
-          <div class="btn" style="background-color: #198754; color: white">
+          <div
+            class="btn"
+            style="background-color: rgb(53, 53, 53); color: white"
+          >
             <span>Choose file</span>
             <input
               type="file"
@@ -528,7 +531,7 @@
               width: 100%;
               height: 25px;
               margin-top: -10vh;
-              background: #198754;
+              background: rgb(53, 53, 53);
             "
             role="progressbar"
             value="0"
