--- a/Coordinators/activities.html
+++ b/Coordinators/activities.html
@@ -67,13 +67,6 @@
             <span style="font-size: 16px">Coordinator Portal</span>
           </a>
         </div>
-
-        <a id="toggle_btn" href="javascript:void(0);"
-          ><i class="fa fa-bars"></i
-        ></a>
-        <a id="mobile_btn" class="mobile_btn float-left" href="#sidebar"
-          ><i class="fa fa-bars"></i
-        ></a>
       </div>
       <div class="sidebar" id="sidebar">
         <div class="sidebar-inner slimscroll">
@@ -112,7 +105,7 @@
 
       <div class="page-wrapper">
         <div
-          class="content"
+          class="content my-4"
           style="
             background-color: #fff;
             margin: 15px;
