--- a/Coordinators/coordinators.html
+++ b/Coordinators/coordinators.html
@@ -74,21 +74,9 @@
             class="logo"
             style="margin-left: -15px; margin-top: 3px"
           >
-            <img
-              src="../assets/img/favicon.png"
-              width="35"
-              height="35"
-              alt=""
-            />
-            <span style="font-size: 16px">Coordinator Portal</span>
+            <span style="font-size: 20px">Coordinator Portal</span>
           </a>
         </div>
-        <a id="toggle_btn" href="javascript:void(0);"
-          ><i class="fa fa-bars"></i
-        ></a>
-        <a id="mobile_btn" class="mobile_btn float-left" href="#sidebar"
-          ><i class="fa fa-bars"></i
-        ></a>
       </div>
       <div class="sidebar" id="sidebar">
         <div class="sidebar-inner slimscroll">
@@ -125,7 +113,7 @@
       </div>
       <div class="page-wrapper">
         <div
-          class="content"
+          class="content my-4"
           style="
             background-color: #fff;
             margin: 15px;
