--- a/Coordinators/events.html
+++ b/Coordinators/events.html
@@ -63,7 +63,7 @@
       "
     >
       <div class="header-left">
-        <a class="logo" style="margin-left: -15px;margin-top: 3px"">
+        <a class="logo" style="margin-left: -15px;margin-top: 3px">
           <span style="font-size: 20px">Coordinator Portal</span>
         </a>
       </div>
