--- a/Coordinators/events.html
+++ b/Coordinators/events.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, user-scalable=0"
     />
 
-    <title>EventsList</title>
+    <title>Payments</title>
     <link
       rel="stylesheet"
       type="text/css"
@@ -52,29 +52,22 @@
       </div>
     </div>
 
-    <div
-      class="header"
-      style="
-        -webkit-box-shadow: 0px 4px 11px 1px rgba(0, 0, 0, 0.33);
-        -moz-box-shadow: 0px 4px 11px 1px rgba(0, 0, 0, 0.33);
-        box-shadow: 0px 4px 11px 1px rgba(0, 0, 0, 0.33);
-        background-color: rgb(53, 53, 53);
-        height: 60px;
-      "
-    >
+    <div class="header">
       <div class="header-left">
-        <a class="logo" style="margin-left: -15px;margin-top: 3px">
+        <a class="logo" style="margin-left: -15px; margin-top: 3px">
           <span style="font-size: 20px">Coordinator Portal</span>
         </a>
       </div>
       <a id="toggle_btn" href="javascript:void(0);"
         ><i class="fa fa-bars"></i
       ></a>
+
       <ul
         class="nav user-menu float-right"
         id="logoutli"
         style="display: none"
       ></ul>
+
       <div
         class="dropdown mobile-user-menu float-right"
         id="logoutli"
@@ -127,6 +120,6 @@
       firebase.initializeApp(firebaseConfig);
     </script>
     <script src="./scripts/auth.js"></script>
-    <script src="./scripts/events.js"></script>
+    <script src="./scripts/payments.js"></script>
   </body>
 </html>
