--- a/MembersPanel/employees.html
+++ b/MembersPanel/employees.html
@@ -50,24 +50,12 @@
 
   <body style="background-color: rgb(238, 238, 238)">
     <div class="main-wrapper">
-      <div class="header" style="background-color: #198754">
+      <div class="header" style="background-color: rgb(53, 53, 53)">
         <div class="header-left">
-          <a href="main.html" class="logo">
-            <img
-              src="../assets/img/favicon.png"
-              width="35"
-              height="35"
-              alt=""
-            />
+          <a class="logo" style="margin-left: -15px; margin-top: 3px">
             <span>Members Portal</span>
           </a>
         </div>
-        <a id="toggle_btn" href="javascript:void(0);"
-          ><i class="fa fa-bars"></i
-        ></a>
-        <a id="mobile_btn" class="mobile_btn float-left" href="#sidebar"
-          ><i class="fa fa-bars"></i
-        ></a>
       </div>
       <div class="sidebar" id="sidebar">
         <div class="sidebar-inner slimscroll">
@@ -117,11 +105,11 @@
       </div>
       <div class="page-wrapper">
         <div
-          class="content"
+          class="content my-4"
           style="
             background-color: #fff;
             margin: 15px;
-            border-top: 3px solid #198754;
+            border-top: 3px solid rgb(53, 53, 53);
             padding: 5px;
             border-radius: 5px;
           "
@@ -252,8 +240,8 @@
                             </td>
 
                             <td>${data.regno}</td>
-                            <td><a href="" style="color: #198754" >${data.department}</a></td>
-                            <td><a href="" style="color: #198754" class="__cf_email__" data-cfemail="fb9a979992959a88929694959288bb9e839a968b979ed5989496">[email&#160;protected]</a></td>
+                            <td><a href="" style="color: rgb(53, 53, 53)" >${data.department}</a></td>
+                            <td><a href="" style="color: rgb(53, 53, 53)" class="__cf_email__" data-cfemail="fb9a979992959a88929694959288bb9e839a968b979ed5989496">[email&#160;protected]</a></td>
                        
                             <td> <span class="custom-badge status-grey">${data.role}</span></td>
 
