--- a/MembersPanel/attenUpdates.html
+++ b/MembersPanel/attenUpdates.html
@@ -257,7 +257,7 @@
                 <a
                   href="myupdates.html"
                   style="
-                    color: rgb(53, 53, 53);
+                    color: red;
                     font-size: 12px;
                     cursor: pointer;
                     font-weight: bold;
