--- a/index.html
+++ b/index.html
@@ -67,23 +67,23 @@
   <div class="row">
   
     <div class="col" >
-      <div class="card" style="background-color: #fff;border-top: 3px solid #198754">
+      <div class="card" style="background-color: #fff;border-top: 3px solid #212A3E">
         <h1 style="text-align: center;"><img src="assets/img/member.jpg" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
         <div class="card-body" style="text-align: center">
-          <h5 class="card-title" style="color: #198754;font-size:15px">Member</h5>
+          <h5 class="card-title" style="color: #212A3E;font-size:15px">Member</h5>
           <p class="card-text"></p>
-          <a href="./MembersPanel/main.html" style="width: 120px; background-color:  #198754;color: #fff;margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
+          <a href="./MembersPanel/main.html" style="width: 120px; background-color:  #212A3E;color: #fff;margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
       </div>
     </div>
 
     <div class="col">
-      <div class="card" style="background-color: #fff;border-top: 3px solid #03b1fc">
+      <div class="card" style="background-color: #fff;border-top: 3px solid #19376D">
         <h1 style="text-align: center;"><img src="assets/img/volunteers.png" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
         <div class="card-body" style="text-align: center">
-          <h5 class="card-title" style="color: #03b1fc; font-size:15px">Coordinator</h5>
+          <h5 class="card-title" style="color: #19376D; font-size:15px">Coordinator</h5>
           <p class="card-text" ></p>
-          <a href="./Coordinators/main.html" style="width: 120px; background-color: #03b1fc;color: #fff;margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
+          <a href="./Coordinators/main.html" style="width: 120px; background-color: #19376D;color: #fff;margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
       </div>
     </div>
@@ -102,12 +102,12 @@
 
 
     <div class="col">
-      <div class="card" style="background-color: #fff;border-top: 3px solid #9743e0">
+      <div class="card" style="background-color: #fff;border-top: 3px solid #454545">
         <h1 style="text-align: center;"><img src="assets/img/superadmin.png" style="width:20vh;height:auto" class="card-img-top" alt="..."></h1>
         <div class="card-body" style="text-align: center">
-          <h5 class="card-title" style="color: #9743e0;font-size:15px">Admin</h5>
+          <h5 class="card-title" style="color: #454545;font-size:15px">Admin</h5>
           <p class="card-text"></p>
-          <a href="https://adminportal.wakewithwellness.in/signin" style="width: 120px; background-color: #9743e0; color: #fff; margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
+          <a href="https://adminportal.wakewithwellness.in" style="width: 120px; background-color: #454545; color: #fff; margin-top:-12px" class="btn"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
         </div>
       </div>
     </div>
