--- a/feedbacks.html
+++ b/feedbacks.html
@@ -147,6 +147,9 @@
       <h3 style="text-align: center">
         <b> EVENT FEEDBACKS</b>
       </h3>
+        <h4 style="text-align: center; color: cornflowerblue">
+        Mental Health Awareness Workshop
+      </h4>
     </div>
 
     <div
