--- a/feedbacks.html
+++ b/feedbacks.html
@@ -195,7 +195,7 @@
           <div class="form-group">
             <label for="exampleFormControlSelect1">
               1. Overall, how would the rate the
-              <strong>Hepah: From Welfare to Well-being </strong
+              <strong> Mental Health Awareness Workshop</strong
               ><span style="color: red; font-size: 15px">*</span></label
             >
             <select id="q1" class="form-control" required>
