--- a/agreement_AppexII.html
+++ b/agreement_AppexII.html
@@ -61,15 +61,26 @@
 
     <br /><br />
 
-    <div class="container" style="margin-top: 7vh; text-align: center">
-      <h3 style="color: #ff9900; font-weight: bold; font-size: 19px">
+    <div
+      class="container"
+      style="margin-top: 3vh; text-align: center; max-width: 100vh"
+    >
+      <img
+        style="
+          height: 20vh;
+          width: 100%;
+          object-fit: cover;
+          margin-bottom: 14px;
+        "
+        src="https://img.freepik.com/free-photo/businessman-blurred-background-with-people-connection-icon-business-leadership-chart_1258-123385.jpg?w=1380&t=st=1683477819~exp=1683478419~hmac=0deb75b669a1b8aa4fc2c20827e21c4ff3c443b908d930612c7a2469471abf9d"
+      />
+      <h3 style="color: #ff9900; font-weight: bold; font-size: 22px">
         Membership Form 2023-24
       </h3>
+      <hr />
     </div>
 
     <div class="container my-2" style="max-width: 100vh">
-      <hr />
-
       <br />
       <form id="myForm">
         <div class="form-group">
@@ -141,7 +152,23 @@
             >Do you want to change your department? If Yes, select the preferred
             department (Optional)</label
           >
-          <select class="form-control" id="dept" required name="dept">
+          <select class="form-control" id="dept" name="dept">
+            <option value=" ">--Select department--</option>
+            <option value="Curation">Curation Department</option>
+            <option value="Editorial">Editorial Department</option>
+            <option value="PR">PR Department</option>
+            <option value="Events">Events Department</option>
+            <option value="Design">Design Department</option>
+            <option value="Marketing">Marketing Department</option>
+          </select>
+        </div>
+
+        <div class="form-group">
+          <label for="exampleInputEmail1"
+            >Do you want to change your department-II? If Yes, select the
+            preferred department (Optional)</label
+          >
+          <select class="form-control" id="dept2" name="dept2">
             <option value=" ">--Select department--</option>
             <option value="Curation">Curation Department</option>
             <option value="Editorial">Editorial Department</option>
@@ -228,6 +255,7 @@
         const bloodType = form["blood"].value;
         const address = form.address.value;
         const dept = form.dept.value;
+        const dept2 = form.dept2.value;
         const date = form.date.value;
         const time = form.time.value;
 
@@ -239,6 +267,7 @@
           bloodType: bloodType,
           address: address,
           dept: dept,
+          dept2: dept2,
           date: date,
           time: time,
         };
