--- a/agreement_AppexII.html
+++ b/agreement_AppexII.html
@@ -191,6 +191,108 @@
             placeholder="Enter address"
           ></textarea>
         </div>
+        <h4 class="card-title">Declarations :</h4>
+        <div class="column" style="text-align: justify">
+          <div class="form-group">
+            <label>
+              <input type="checkbox" required />
+              I understand that all the funds raised/ donated will be used only
+              for WakeWithWellness (after getting approval from the Head of
+              Finance) and not for any other reasons. If found indulging in such
+              activity, I recognize that will be the reason for immediate
+              removal from WakeWithWellness, will have to compensate the entire
+              amount of misused finances, and will face the relevant
+              consequences.<span style="color: red">*</span></label
+            >
+          </div>
+
+          <div class="form-group">
+            <label>
+              <input type="checkbox" required />
+              I understand that I should
+              <strong
+                >maintain confidentiality of plans, ideas, resources, materials,
+                etc. discussed/used amongst the team. If I wish to implement the
+                aforementioned elsewhere or share them with a third party not
+                affiliated with WakeWithWellness</strong
+              >, I will get approval from the HR and Chairperson head first.
+              After getting approval, I will provide due credit per the
+              standards of WakeWithWellness, if this is implemented or shared
+              elsewhere. I recognize that if I breach this clause, I can be
+              removed from WakeWithWellness immediately and will face the
+              relevant consequences. I understand that this clause stands even
+              after leaving WakeWithWellness that the material can not be shared
+              with any third party without approval, and I will not engage in
+              such practices.<span style="color: red">*</span>
+            </label>
+          </div>
+
+          <div class="form-group">
+            <label>
+              <input type="checkbox" required />
+              If at any point of time I want to discontinue working for my
+              position, I will inform my CBO’s HR Head or respective Department
+              Head ,
+              <strong
+                >minimum 4 weeks prior and I will continue working in my
+                position for these 4 weeks</strong
+              >. The only exception to this clause is immediate termination of
+              position in case of an emergency as determined by
+              WakeWithWellness. I recognize that reasons such as exams,
+              vacations, packed schedules, etc. do not stand ground as an
+              emergency and I will continue working for the remaining 4 weeks
+              till the termination of the position. Note: You can take breaks as
+              and when required, but the HR or respective Departmental Head
+              should be informed minimum 1 week in advance depending on the
+              nature of the leave. <span style="color: red">*</span></label
+            >
+          </div>
+
+          <div class="form-group">
+            <label>
+              <input type="checkbox" required />
+              I will work to the best of my ability. I recognize that continuous
+              negligence of responsibilities, deadlines and confidentiality
+              rules will result in my removal from WakeWithWellness
+              <span style="color: red">*</span>
+            </label>
+          </div>
+
+          <div class="form-group">
+            <label>
+              <input type="checkbox" required />
+              I understand that if I am found indulging in
+              <strong
+                >malpractices of any sort, spreading misinformation about
+                WakeWithWellness and our work</strong
+              >, I will be removed from WakeWithWellness immediately and will
+              face the relevant consequences.<span style="color: red"
+                >*</span
+              ></label
+            >
+          </div>
+
+          <div class="form-group">
+            <label>
+              <input type="checkbox" required />
+              I will respect all individuals and their preferred identity, be
+              inclusive in my position, conduct all my responsibilities with
+              dedication, transparency and integrity.
+              <span style="color: red">*</span></label
+            >
+          </div>
+
+          <div class="form-group">
+            <label>
+              <input type="checkbox" required />
+              I will abide the code of ethics and professional conduct of
+              <span style="font-weight: bold">WakeWithWellness</span>
+              and <span style="font-weight: bold">United Nations</span
+              ><span style="color: red">*</span>
+            </label>
+          </div>
+        </div>
+
         <input type="date" name="date" id="date" hidden />
         <input type="text" name="time" value="" id="current-time" hidden />
         <div class="text-center">
