--- a/agreement_board.html
+++ b/agreement_board.html
@@ -266,7 +266,7 @@
             resources, materials, etc. discussed/used amongst the team. If I
             wish to implement the aforementioned elsewhere or share them with a
             third party not affiliated with WakeWithWellness, I will get
-            approval from the HR and Administrative head first. After getting
+            approval from the Founder and Co-founders first. After getting
             approval, I will provide due credit per the standards of
             WakeWithWellness, if this is implemented or shared elsewhere. I
             recognize that if I breach this clause, I can be removed from
@@ -282,17 +282,16 @@
           <label>
             <input type="checkbox" name="declaration" required />
             If at any point of time I want to discontinue working for my
-            position, I will inform my CBO’s HR Head or respective Department
-            Head , minimum 4 weeks prior and I will continue working in my
-            position for these 4 weeks. The only exception to this clause is
-            immediate termination of position in case of an emergency as
-            determined by WakeWithWellness. I recognize that reasons such as
-            exams, vacations, packed schedules, etc. do not stand ground as an
-            emergency and I will continue working for the remaining 4 weeks till
-            the termination of the position. Note: You can take breaks as and
-            when required, but the HR or respective Departmental Head should be
-            informed minimum 1 week in advance depending on the nature of the
-            leave. <span style="color: red">*</span></label
+            position, I will inform my CBO’s Founder and Co-founders , minimum 4
+            weeks prior and I will continue working in my position for these 4
+            weeks. The only exception to this clause is immediate termination of
+            position in case of an emergency as determined by WakeWithWellness.
+            I recognize that reasons such as exams, vacations, packed schedules,
+            etc. do not stand ground as an emergency and I will continue working
+            for the remaining 4 weeks till the termination of the position.
+            Note: You can take breaks as and when required, but the Founder and
+            Co-founders should be informed minimum 1 week in advance depending
+            on the nature of the leave. <span style="color: red">*</span></label
           >
         </div>
 
