--- a/agreement_board.html
+++ b/agreement_board.html
@@ -248,8 +248,7 @@
           <label>
             <input type="checkbox" name="declaration" required />
             I understand that all the funds raised/ donated will be used only
-            for WakeWithWellness (after getting approval from the Head of
-            Finance) and not for any other reasons. If found indulging in such
+            for WakeWithWellness (after getting approval from the Founder and Co-founders) and not for any other reasons. If found indulging in such
             activity, I recognize that will be the reason for immediate removal
             from WakeWithWellness, will have to compensate the entire amount of
             misused finances, and will face the relevant consequences.<span
