--- a/agreement_board.html
+++ b/agreement_board.html
@@ -169,7 +169,7 @@
                 ></label
               >
               <input
-                type="tel"
+                type="text"
                 required
                 class="form-control"
                 id="alt"
