--- a/agreement_AppexII.html
+++ b/agreement_AppexII.html
@@ -214,7 +214,9 @@
         <input type="text" name="time" value="" id="current-time" hidden />
         <div class="text-center">
           <p style="color: red" id="status"></p>
-          <button class="btn btn-success" type="submit">Submit</button>
+          
+          <h4 style="color: red">Form closed</h4>
+<!--           <button class="btn btn-success" type="submit">Submit</button> -->
         </div>
       </form>
 
