--- a/MembersPanel/leaves.html
+++ b/MembersPanel/leaves.html
@@ -205,6 +205,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
+    <script src="./scripts/auth.js"></script>
     <script>
       // Get the current date
       const currentDate = new Date().toISOString().slice(0, 10);
@@ -234,6 +236,16 @@
       };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
+
+      const auth = firebase.auth();
+
+      firebase.auth().onAuthStateChanged(function (user) {
+        if (user) {
+          // User is signed in.
+        } else {
+          window.location.href = "./main.html";
+        }
+      });
 
       var db = firebase.firestore();
 
