--- a/MembersPanel/activities.html
+++ b/MembersPanel/activities.html
@@ -165,6 +165,38 @@
                     >
                       <div
                         class="activity-content"
+                        onclick="location.href='attenUpdates.html'"
+                        style="cursor: pointer"
+                      >
+                        <div class="timeline-content">
+                          <a style="color: rgb(67, 67, 67)" class="name"
+                            >Attendance Updates</a
+                          >
+                        </div>
+                      </div>
+                    </li>
+
+                    <li
+                      style="border-color: rgb(53, 53, 53); border-radius: 5px"
+                    >
+                      <div
+                        class="activity-content"
+                        onclick="location.href='leaves.html'"
+                        style="cursor: pointer"
+                      >
+                        <div class="timeline-content">
+                          <a style="color: rgb(67, 67, 67)" class="name"
+                            >Leave Application</a
+                          >
+                        </div>
+                      </div>
+                    </li>
+
+                    <!-- <li
+                      style="border-color: rgb(53, 53, 53); border-radius: 5px"
+                    >
+                      <div
+                        class="activity-content"
                         onclick="location.href='Meetings/meeting.html'"
                         style="cursor: pointer"
                       >
@@ -177,9 +209,9 @@
                           >
                         </div>
                       </div>
-                    </li>
+                    </li> -->
 
-                    <li
+                    <!-- <li
                       style="border-color: rgb(53, 53, 53); border-radius: 5px"
                     >
                       <div
@@ -196,7 +228,7 @@
                           >
                         </div>
                       </div>
-                    </li>
+                    </li> -->
                   </ul>
                 </div>
               </div>
