--- a/MembersPanel/agreement.html
+++ b/MembersPanel/agreement.html
@@ -61,7 +61,7 @@
     style="background-color: rgb(238, 238, 238)"
     oncontextmenu="return false"
   >
-    <div class="header" style="background-color: #198754">
+    <div class="header" style="background-color: rgb(53, 53, 53)">
       <div class="header-left">
         <a class="logo" style="float: left">
           <img src="../assets/img/favicon.png" width="35" height="35" alt="" />
